# astro-airflow-pipelines

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
dags/create_new_material/: create_new_material.py
dags/train_model/: train_model.py
dags/train_model_with_new_material/: train_model_with_new_material.py
dags/upload_images_to_minio/: upload_images_to_minio.py
include/: entities.py  model.py  repositories.py  settings.py  usecases.py
include/create_new_material/: tasks.py
include/custom_task_groups/: create_bucket.py
include/global_variables/: global_variables.py
include/train_model/: tasks.py
include/upload_images_to_minio/: tasks.py
