[project]
requires-python = ">=3.11"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8-naming
    "I",  # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
]

ignore = [
    "E501",
    "B008",
    "C901",
    "B017",
    "N818",
]

fixable = ["ALL"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
force-single-line = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
